# ddb

./: .gitattributes  .gitignore  .gitmodules  CHANGELOG  CONTRIBUTING.md  ERROR_LEVELS.md  ISSUE_TEMPLATE.md  KNOWLEDGE-AUGMENTATION-PLAN.md  PLAN.md  README  README.md  SECURITY.md  STYLEGUIDE.md  lsan_arangodb_suppressions.txt  tsan_arangodb_suppressions.txt  ubsan_arangodb_suppressions.txt
client-tools/Utils/: CMakeLists.txt  ClientManager.cpp
ddb/: .env.example  .gitignore  3DKG_IMPLEMENTATION_MAP.md  Dockerfile  README.md  pyproject.toml
ddb-old/Agency/: AddFollower.cpp  AgencyFeature.cpp  Agent.cpp  AgentCallback.cpp  AgentCallback.h  AgentConfiguration.cpp  AgentConfiguration.h  AgentInterface.h  AsyncAgencyComm.cpp  AsyncAgencyComm.h  CMakeLists.txt  CleanOutServer.cpp  CleanOutServer.h  Compactor.cpp  Compactor.h  Constituent.cpp  Constituent.h  FailedFollower.cpp  FailedFollower.h  FailedLeader.cpp  FailedLeader.h  FailedServer.cpp  FailedServer.h  Helpers.cpp  Helpers.h  Inception.cpp  Inception.h  Job.cpp  Job.h  JobContext.cpp  JobContext.h  MoveShard.cpp  MoveShard.h  Node.cpp  Node.h  NodeDeserialization.h  NodeLoadInspector.h  PathComponent.cpp  PathComponent.h  ReconfigureReplicatedLog.cpp  (+18 more)
ddb-old/Graph/: BaseOptions.cpp  CMakeLists.txt  Graph.cpp  GraphManager.cpp  GraphOperations.cpp  PathType.cpp  ShortestPathOptions.cpp  TraverserOptions.cpp
ddb-old/Graph/Cache/: CMakeLists.txt
ddb-old/Graph/Cursors/: CMakeLists.txt  SingleServerEdgeCursor.cpp
ddb-old/Graph/Enumerators/: CMakeLists.txt  OneSidedEnumeratorInterface.cpp
ddb-old/Graph/Helpers/: CMakeLists.txt
ddb-old/Graph/Options/: CMakeLists.txt
ddb-old/Graph/PathManagement/: CMakeLists.txt
ddb-old/Graph/Providers/: CMakeLists.txt  ClusterProvider.cpp
ddb-old/Graph/Queues/: CMakeLists.txt
ddb-old/Graph/Steps/: CMakeLists.txt  ClusterProviderStep.h  SingleServerProviderStep.h
ddb-old/Graph/Types/: CMakeLists.txt
ddb-old/Indexes/: CMakeLists.txt  Index.cpp  IndexIterator.cpp  SimpleAttributeEqualityMatcher.cpp  SortedIndexAttributeMatcher.cpp
ddb-old/Metrics/: CMakeLists.txt  MetricsFeature.cpp
ddb-old/Network/: CMakeLists.txt  ClusterUtils.cpp  ConnectionPool.cpp  Methods.cpp  NetworkFeature.cpp  Utils.cpp
ddb-old/Replication/: CMakeLists.txt  DatabaseInitialSyncer.cpp  DatabaseReplicationApplier.cpp  DatabaseTailingSyncer.cpp  GlobalInitialSyncer.cpp  GlobalReplicationApplier.cpp  GlobalTailingSyncer.cpp  ReplicationApplier.cpp  ReplicationApplierConfiguration.cpp  ReplicationFeature.cpp  Syncer.cpp  Syncer.h  SyncerId.cpp  TailingSyncer.cpp
ddb-old/Replication2/: CMakeLists.txt  LoggerContext.h  Methods.cpp
ddb-old/Replication2/Exceptions/: CMakeLists.txt
ddb-old/Replication2/ReplicatedLog/: CMakeLists.txt  InMemoryLog.h  InMemoryLogEntry.h  LogLeader.cpp  LogPayload.cpp  NetworkAttachedFollower.cpp  (+4 more)
ddb-old/RestHandler/: CMakeLists.txt  RestAdminClusterHandler.cpp  RestAdminClusterHandler.h  RestAdminDatabaseHandler.cpp  RestAdminLogHandler.cpp  RestAdminLogHandler.h  RestAdminRoutingHandler.cpp  RestAdminStatisticsHandler.h  RestAnalyzerHandler.cpp  RestAnalyzerHandler.h  RestAqlFunctionsHandler.h  RestAqlUserFunctionsHandler.cpp  RestAqlUserFunctionsHandler.h  RestAuthHandler.cpp  RestAuthHandler.h  RestAuthReloadHandler.cpp  RestAuthReloadHandler.h  RestBaseHandler.cpp  RestBaseHandler.h  RestCollectionHandler.cpp  RestCollectionHandler.h  RestCompactHandler.cpp  RestCompactHandler.h  RestCursorHandler.cpp  RestCursorHandler.h  RestDatabaseHandler.cpp  RestDatabaseHandler.h  RestDebugHandler.cpp  RestDebugHandler.h  RestDocumentHandler.cpp  RestDocumentHandler.h  RestDocumentStateHandler.cpp  RestDocumentStateHandler.h  RestDumpHandler.cpp  RestDumpHandler.h  RestEdgesHandler.cpp  RestEdgesHandler.h  RestEndpointHandler.cpp  RestEndpointHandler.h  RestEngineHandler.cpp  (+76 more)
ddb-old/Scheduler/: CMakeLists.txt  Scheduler.cpp
ddb-old/StorageEngine/: CMakeLists.txt  EngineSelectorFeature.cpp  PhysicalCollection.cpp  TransactionState.cpp  VPackSortMigration.cpp
ddb-old/Utils/: CMakeLists.txt  CursorRepository.cpp  DatabaseGuard.cpp  ExecContext.cpp  SingleCollectionTransaction.cpp  SupportInfoBuilder.cpp
ddb-old/VocBase/: AccessMode.h  CMakeLists.txt  ComputedValues.cpp  KeyGenerator.cpp  LogicalCollection.cpp  LogicalDataSource.cpp  LogicalView.cpp  Validators.cpp  VocBaseLogManager.cpp  VocbaseInfo.cpp  vocbase.cpp
ddb-old/Zkd/: CMakeLists.txt  ZkdHelper.h
ddb/agui/: __init__.py  adapter.py  emitter.py  models.py  session.py
ddb/cards/: __init__.py  builder.py  schema.py  templates.py  validator.py
ddb/darango/: __init__.py
ddb/darbotdb/: config.py
ddb/graph/: __init__.py  manifest.py  migrate.py  projection.py  queries.py  setup.py  sync.py
ddb/graph3d/: __init__.py  coords.py  layout.py  models.py  queries.py  sync.py
ddb/mcp/: README.md  package.json  server.ts  tsconfig.json
ddb/micro/: __init__.py  engine.py  manager.py  schema.py  sync.py
ddb/session/: __init__.py  arango_session.py  factory.py  hybrid_session.py  micro_session.py  models.py  protocol.py
ddb/tests/: test_cards.py  test_graph3d.py  test_health.py  test_manifest.py  test_micro.py  test_session.py
ddb/triad/: __init__.py  engine.py  models.py  observer.py  orchestrator.py  synthesizer.py
ddb/txt2kg/: __init__.py  bridge.py  client.py  models.py
lib/TaskMonitoring/: CMakeLists.txt
lib/V8/: CMakeLists.txt  v8-shell.cpp  v8-utils.cpp  v8-vpack.cpp
tests/Actor/: ActorListTest.cpp  CMakeLists.txt  MPSCQueueTest.cpp  MultiRuntimeTest.cpp  RuntimeTest.cpp  ThreadPoolScheduler.h
tests/BuildId/: CMakeLists.txt
tests/Futures/: CMakeLists.txt
tests/Graph/: CMakeLists.txt  GenericGraphProviderTest.cpp  GraphTestTools.cpp  KShortestPathsFinderTest.cpp  TraverserCacheTest.cpp  WeightedShortestPathTest.cpp
tests/Inspection/: CMakeLists.txt
tests/InternalRestHandler/: CMakeLists.txt
tests/Replication2/: CMakeLists.txt  main-replication2.cpp
tests/TaskMonitoring/: CMakeLists.txt  TaskRegistryTest.cpp
tests/Zkd/: CMakeLists.txt  Conversion.cpp  Library.cpp  main.cpp
(+2193 files in other folders)
